Updated data in en,hi,mr,te

--- a/entity/data/variations/variations-hi.yaml
+++ b/entity/data/variations/variations-hi.yaml
@@ -1359,6 +1359,416 @@ bank_name:
   - लक्ष्मी नरसिम्हा स्वामि को ऑप बैंक
   Yes Bank:
   - यस बैंक
+  ADARNIYA P D PATILSAHEB SAHAKARI BANK LTD KARAD:
+  - अदरणीय पी डी पाटीलसाहेब सहकारी बैंक लिमिटेड कराड
+  - अदरणीय पी डी पाटीलसाहेब सहकारी बैंक
+  AMAN SAHAKARI BANK LTD.,ICHALKARANJI:
+  - अमन सहकारी बैंक लिमिटेड इचलकरंजी
+  - अमन सहकारी बैंक
+  Abhinandan Urban Coop Bank Amravati:
+  - अभिनंदन अर्बन कूप बैंक अमरावती
+  - अभिनंदन अर्बन कूप बैंक
+  Adilabad District Coop Central Bank Ltd:
+  - आदिलाबाद डिस्ट्रिक्ट कूप सेंट्रल बैंक लिमिटेड
+  - आदिलाबाद डिस्ट्रिक्ट कूप सेंट्रल बैंक
+  Alavi Cooperative Bank Ltd:
+  - अलावी कोआपरेटिव बैंक लिमिटेड
+  - अलावी कोआपरेटिव बैंक
+  Appasaheb Birnale Sahakari Bank Ltd Dudhgaon:
+  - अप्पासाहेब बिरनाले सहकारी बैंक लिमिटेड दुधगांव
+  - अप्पासाहेब बिरनाले सहकारी बैंक
+  Appnit Technologies Pvt. Ltd.:
+  - एप्निट टेक्नोलॉजीज पीवीटी लिमिटेड
+  Aryavart Bank:
+  - आर्यावर्त बैंक
+  BRAHMADEODADA MANE SAHAKARI BANK LTD SOLAPUR:
+  - ब्रह्मदेवदादा माने सहकारी बैंक लिमिटेड सोलापुर
+  - ब्रह्मदेवदादा माने सहकारी बैंक
+  Betul Nagrik Sahakari Bank Ltd:
+  - बेतुल नागरिक सहकारी बैंक लिमिटेड
+  - बेतुल नागरिक सहकारी बैंक
+  Bhagini Nivedita Sahakari Bank Ltd,Pune:
+  - भगिनी निवेदिता सहकारी बैंक लिमिटेड पुणे
+  - भगिनी निवेदिता सहकारी बैंक
+  CSB Bank Limited:
+  - सीएसबी बैंक लिमिटेड
+  - सीएसबी बैंक
+  Chaitanya Mahila Bank:
+  - चैतन्य महिला बैंक
+  Chittorgarh Urban Co-operative Bank Ltd:
+  - चित्तोड़गढ़ अर्बन सीओ ऑपरेटिव बैंक लिमिटेड
+  - चित्तोड़गढ़ अर्बन सीओ ऑपरेटिव बैंक
+  Citizen Credit Co-Operative Bank Ltd.:
+  - सिटीजन क्रेडिट सीओ-ऑपरेटिव बैंक लिमिटेड
+  - सिटीजन क्रेडिट सीओ-ऑपरेटिव बैंक
+  DAIVADNYA SAHAKAR BANK NIYAMIT:
+  - दैवज्ञ सहकार बैंक नियमित
+  - दैवज्ञ सहकार बैंक
+  District Coop Central Bank Ltd,Khammam:
+  - डिस्ट्रिक्ट कूप सेंट्रल बैंक लिमिटेड खम्मम
+  - डिस्ट्रिक्ट कूप सेंट्रल बैंक
+  Dr. Annasaheb Chougule Urban Co-Op. Bank Ltd.,Peth Vadgaon:
+  - डीआर. अण्णासाहेब चौगुले अर्बन सीओ-ओप. बैंक लिमिटेड पेठ वडगांव
+  - डीआर. अण्णासाहेब चौगुले अर्बन सीओ-ओप. बैंक
+  Dr. Appasaheb Urf Sa. Re. Patil Jaysingpur Udgaon Sahakari Bank Ltd Jaysingpur:
+  - डीआर. अप्पासाहेब उर्फ सा. रे. पाटिल जयसिंगपुर उदगांव सहकारी बैंक लिमिटेड जयसिंगपुर
+  - डीआर. अप्पासाहेब उर्फ सा. रे. पाटिल जयसिंगपुर उदगांव सहकारी बैंक
+  Garagepreneurs Internet Pvt. Ltd.:
+  - गैरेजप्रेन्योर्स इंटरनेट पीवीटी लिमिटेड
+  Hadagali Urban Co-Operative Bank Ltd:
+  - हडगली अर्बन सीओ-ऑपरेटिव बैंक लिमिटेड
+  - हडगली अर्बन सीओ-ऑपरेटिव बैंक
+  Haveli Sahakari Bank Maryadit.:
+  - हवेली सहकारी बैंक मर्यादित
+  - हवेली सहकारी बैंक
+  IDFC Bank:
+  - आईडीएफसी बैंक
+  ILKAL CO-OPERATIVE BANK LTD ILKAL:
+  - इल्कल सीओ-ऑपरेटिव बैंक लिमिटेड इल्कल
+  - इल्कल सीओ-ऑपरेटिव बैंक
+  Idar Nagrik Sahakari Bank Ltd.:
+  - इदर नागरिक सहकारी बैंक लिमिटेड
+  - दर नागरिक सहकारी बैंक
+  Indore Cloth Market Co-Op Bank Ltd:
+  - इंडोर क्लॉथ मार्केट सीओ-ओप बैंक लिमिटेड
+  - इंडोर क्लॉथ मार्केट सीओ-ओप बैंक
+  Indraprastha Sehkari Bank Ltd:
+  - इंद्रप्रस्थ सहकारी बैंक लिमिटेड
+  - इंद्रप्रस्थ सहकारी बैंक
+  Jalore Nagrik Sahakari Bank Ltd:
+  - जालोर नागरिक सहकारी बैंक लिमिटेड
+  - जालोर नागरिक सहकारी बैंक
+  Jamia Co-Operative Bank Ltd:
+  - जामिया सीओ-ऑपरेटिव बैंक लिमिटेड
+  - जामिया सीओ-ऑपरेटिव बैंक
+  Janata Sahakari Bank Ltd., Ajara:
+  - जनता सहकारी बैंक लिमिटेड अजारा
+  - जनता सहकारी बैंक
+  Jankalyan Urban Co-Operative Bank Ltd:
+  - जनकल्याण अर्बन सीओ-ऑपरेटिव बैंक लिमिटेड
+  - जनकल्याण अर्बन सीओ-ऑपरेटिव बैंक
+  Jogindra Central Cooperative Bank Limited:
+  - जोगिंद्र सेंट्रल कोआपरेटिव बैंक लिमिटेड
+  - जोगिंद्र सेंट्रल कोआपरेटिव बैंक
+  Kashi Gomati Samyut Grameen Bank:
+  - काशी गोमती संयुत ग्रामीण बैंक
+  Kerala State Co-operative Bank Ltd:
+  - केराला स्टेट सीओ-ऑपरेटिव बैंक लिमिटेड
+  - केराला स्टेट सीओ-ऑपरेटिव बैंक
+  Khardah Co-operative Bank Ltd.:
+  - खरदाह सीओ-ऑपरेटिव बैंक लिमिटेड
+  - खरदाह सीओ-ऑपरेटिव बैंक
+  Koyana Sahakari bank Ltd, Karad:
+  - कोयना सहकारी बैंक लिमिटेड कराड
+  - कोयना सहकारी बैंक
+  Krishna Mercantile Cooperative Bank Ltd Bhopal:
+  - कृष्ण मर्केंटाइल कोआपरेटिव बैंक लिमिटेड भोपाल
+  - कृष्ण मर्केंटाइल कोआपरेटिव बैंक
+  LOKMANGAL CO OP BANK LTD SOLAPUR:
+  - लोकमंगल सीओ ओप बैंक लिमिटेड सोलापुर
+  - लोकमंगल सीओ ओप बैंक
+  Lakhimpur Urban Cooperative Bank Ltd.:
+  - लखीमपुर अर्बन कोआपरेटिव बैंक लिमिटेड
+  - लखीमपुर अर्बन कोआपरेटिव बैंक
+  Laxmi Urban Co-Op. Bank Ltd. Latur.:
+  - लक्ष्मी अर्बन सीओ-ओप बैंक लिमिटेड लातूर
+  - लक्ष्मी अर्बन सीओ ओप बैंक
+  Mahesh Urban Co-operative Bank, Parbhani:
+  - महेश अर्बन सीओ-ऑपरेटिव बैंक परभानी
+  - महेश अर्बन सीओ-ऑपरेटिव बैंक
+  Merchants liberal Co operative Bank Ltd Gadag:
+  - मर्चेंट लिबरल सीओ ऑपरेटिव बैंक लिमिटेड गदग
+  - मर्चेंट लिबरल सीओ ऑपरेटिव बैंक
+  Muzaffarnagar District Cooperative Bank Ltd:
+  - मुजफ्फरनगर डिस्ट्रिक्ट कोआपरेटिव बैंक लिमिटेड
+  - मुजफ्फरनगर डिस्ट्रिक्ट कोआपरेटिव बैंक
+  NAVANAGARA URBAN CO-OPERATIVE BANK LTD.:
+  - नवानगर अर्बन सीओ-ऑपरेटिव बैंक लिमिटेड
+  - नवानगर अर्बन सीओ-ऑपरेटिव बैंक
+  Nalgonda District Coop Central Bank Ltd:
+  - नालगोंडा डिस्ट्रिक्ट कूप सेंट्रल बैंक लिमिटेड
+  - नालगोंडा डिस्ट्रिक्ट कूप सेंट्रल बैंक
+  New India Co-op Bank:
+  - न्यू इंडिया सीओ-ओप बैंक
+  One MobiKwik Systems Limited:
+  - ओने मोबिक्विक सिस्टम लिमिटेड
+  PDP BANK KARAD bank:
+  - पीडीपी बैंक कराड बैंक
+  Pay Point India Network Private Limited:
+  - पे पॉइंट इंडिया नेटवर्क प्राइवेट लिमिटेड
+  PayU Payments Private Limited:
+  - पायु पेमेंट्स प्राइवेट लिमिटेड
+  Priyadarshani Urban Co Op Bank Ltd Kallam:
+  - प्रियदर्शनी अर्बन सीओ ओप बैंक लिमिटेड कल्लम
+  - प्रियदर्शनी अर्बन सीओ ओप बैंक
+  Puduvai Bharathiar Grama Bank:
+  - पुदुवई भरतियार ग्रामा बैंक
+  Pune District Cooperative Bank:
+  - पुणे डिस्ट्रिक्ट कोआपरेटिव बैंक
+  Pusad Urban Cooperative Bank Ltd.:
+  - पुसद अर्बन कोआपरेटिव बैंक लिमिटेड
+  - पुसद अर्बन कोआपरेटिव बैंक
+  Rajapur Urban Cooperative Bank Ltd:
+  - राजापुर अर्बन कोआपरेटिव बैंक लिमिटेड
+  - राजापुर अर्बन कोआपरेटिव बैंक
+  Raje Vikramsinh Ghatge Co-Op. Bank Ltd. Kagal:
+  - राजे विक्रमसिंह घाटगे सीओ-ओप बैंक लिमिटेड कागल
+  - राजे विक्रमसिंह घाटगे सीओ-ओप बैंक
+  Rajlaxmi Urban Co-op Bank Ltd:
+  - राजलक्ष्मी अर्बन सीओ-ओप बैंक लिमिटेड
+  - राजलक्ष्मी अर्बन सीओ-ओप बैंक
+  Rapipay Fintech Private Limited:
+  - रेपीपे फिनटेक प्राइवेट लिमिटेड
+  - रेपीपे फिनटेक प्राइवेट
+  Ratnagiri District Central Co operative Bank Ltd:
+  - रत्नागिरी डिस्ट्रिक्ट सेंट्रल सीओ ऑपरेटिव बैंक लिमिटेड
+  - रत्नागिरी डिस्ट्रिक्ट सेंट्रल सीओ ऑपरेटिव बैंक
+  Reserve Bank Employees Co-opertive Bank Limited:
+  - रिजर्व बैंक एम्प्लाइज सीओ-ऑपरटिव बैंक लिमिटेड
+  - रिजर्व बैंक एम्प्लाइज सीओ-ऑपरटिव बैंक
+  SALEM DISTRICT CENTRAL COOPERATIVE BANK:
+  - सलेम डिस्ट्रिक्ट सेंट्रल कोआपरेटिव बैंक
+  SANMITRA MAHILA NAGARI SAHAKARI BANK MARYADIT CHANDRAPUR:
+  - सन्मित्र महिला नगरी सहकारी बैंक मर्यादित चंद्रपुर
+  - सन्मित्र महिला नगरी सहकारी बैंक
+  SARDAR SINGH NAGRIK SAHKARI BANK MARYADIT TIKAMGARH:
+  - सरदार सिंह नागरिक सहकारी बैंक मर्यादित टीकमगढ़
+  - सरदार सिंह नागरिक सहकारी बैंक
+  SHREE BALAJI URBAN CO OPERATIVE BANK LTD:
+  - श्री बालाजी अर्बन सीओ ऑपरेटिव बैंक लिमिटेड
+  - श्री बालाजी अर्बन सीओ ऑपरेटिव बैंक
+  Sadalga Urban Souharda Sahakari Bank Niyamit:
+  - सदलगा अर्बन सौहार्द सहकारी बैंक नियमित
+  - सदलगा अर्बन सौहार्द सहकारी बैंक
+  Saptagiri Grameena Bank:
+  - सप्तगिरि ग्रामीण बैंक
+  Shree Mahuva Nagrik Sahkari Bank Ltd.:
+  - श्री महुवा नागरिक सहकारी बैंक लिमिटेड
+  - श्री महुवा नागरिक सहकारी बैंक
+  Shri Chatrapati Shivaji Maharaj Sahakari:
+  - श्री छत्रपति शिवाजी महाराज सहकारी
+  Shri Gajanan Maharaj Urban Co-Op Bank Ltd Bhokardan:
+  - श्री गजानन महाराज अर्बन सीओ-ओप बैंक लिमिटेड भोकरदन
+  - श्री गजानन महाराज अर्बन सीओ-ओप बैंक
+  Shri Yashwant Sahakari Bank Maryadit Kuditre:
+  - श्री यशवंत सहकारी बैंक मर्यादित कुडित्रे
+  - श्री यशवंत सहकारी बैंक
+  Shri  D. T. Patil Co-opertive Bank Ltd, Chikodi:
+  - श्री  डी. टी. पाटिल सीओ-ऑपरटिव बैंक लिमिटेड चिकोडी
+  - श्री  डी. टी. पाटिल सीओ-ऑपरटिव बैंक
+  Sri Gokarnanath Co-Operative Bank Ltd:
+  - श्री गोकर्णनाथ सीओ-ऑपरेटिव बैंक लिमिटेड
+  - श्री गोकर्णनाथ सीओ-ऑपरेटिव बैंक
+  Sri Seetharaghava Souharda Sahakara Bank Niyamitha:
+  - श्री सीताराघव सौहार्द सहकारा बैंक नियमित
+  - श्री सीताराघव सौहार्द सहकारा बैंक
+  Sulthan Bathery Co-operative Urban Bank:
+  - सुलतान बाथरी सीओ-ऑपरेटिव अर्बन बैंक
+  THE AMRAVATI ZILLA PARISHAD SHIKSHAK SAHAKARI BANK:
+  - थे अमरावती जिल्ला परिषद शिक्षक सहकारी बैंक
+  THE BURDWAN CENTRAL COOPERATIVE BANK LTD:
+  - थे बर्दवान सेंट्रल कोआपरेटिव बैंक लिमिटेड
+  - थे बर्दवान सेंट्रल कोआपरेटिव बैंक
+  THE CHIPLUN URBAN COOPERATIVE BANK LTD:
+  - थे चिपलून अर्बन कोआपरेटिव बैंक लिमिटेड
+  - थे चिपलून अर्बन कोआपरेटिव बैंक
+  THE JANATA CO-OPERATIVE BANK LTD. DELHI:
+  - थे जनता सीओ-ऑपरेटिव बैंक लिमिटेड डेल्ही
+  - थे जनता सीओ-ऑपरेटिव बैंक
+  THE KANGRA CENTRAL CO-OPERATIVE BANK LTD:
+  - थे कांगरा सेंट्रल सीओ-ऑपरेटिव बैंक लिमिटेड
+  - थे कांगरा सेंट्रल सीओ-ऑपरेटिव बैंक
+  THE NASIKROAD DEOLALI VYAPARI SAHAKARI BANK LTD.:
+  - थे नासिकरोड देवलाली व्यापारी सहकारी बैंक लिमिटेड
+  - थे नासिकरोड देवलाली व्यापारी सहकारी बैंक
+  THE RAIGAD DISTRICT CO OPERATIVE BANK LTD ALIBAG:
+  - थे रायगढ़ डिस्ट्रिक्ट सीओ ऑपरेटिव बैंक लिमिटेड अलीबाग
+  - थे रायगढ़ डिस्ट्रिक्ट सीओ ऑपरेटिव बैंक
+  Tamil Nadu Grama Bank:
+  - तमिल नाडु ग्रामा बैंक
+  The Adarsh Urban Co-op. Bank Ltd., Hyderabad:
+  - थे आदर्श अर्बन सीओ-ओप बैंक लिमिटेड हैदराबाद
+  - थे आदर्श अर्बन सीओ-ओप बैंक
+  The Agrasen Nagari Sahakari Bank Ltd, Akola:
+  - थे अग्रसेन नगरी सहकारी बैंक लिमिटेड अकोला
+  - थे अग्रसेन नगरी सहकारी बैंक
+  The Ashta Peoples Co-op Bank Ltd Ashta:
+  - थे अष्ट पीपल्स सीओ-ओप बैंक लिमिटेड अष्ट
+  - थे अष्ट पीपल्स सीओ-ओप बैंक
+  The Bardoli Nagrik Sahakari Bank Ltd:
+  - थे बारडोली नागरिक सहकारी बैंक लिमिटेड
+  - थे बारडोली नागरिक सहकारी बैंक
+  The Bavla Nagrik Sahakari Bank Ltd.:
+  - थे बावला नागरिक सहकारी बैंक लिमिटेड।
+  - थे बावला नागरिक सहकारी बैंक
+  The Bhagyalakshmi Mahila Sahakari Bank Ltd:
+  - थे भाग्यलक्ष्मी महिला सहकारी बैंक लिमिटेड
+  - थे भाग्यलक्ष्मी महिला सहकारी बैंक
+  The Chandigarh State Co-op Bank Ltd:
+  - थे चंडीगढ़ स्टेट सीओ-ओप बैंक लिमिटेड
+  - थे चंडीगढ़ स्टेट सीओ-ओप बैंक
+  The Co-Operative Bank of Rajkot Ltd.:
+  - थे सीओ-ऑपरेटिव बैंक ओएफ राजकोट लिमिटेड
+  - थे सीओ-ऑपरेटिव बैंक
+  The Commercial Co-operative Bank Ltd .:
+  - थे कमर्शियल सीओ-ऑपरेटिव बैंक लिमिटेड
+  - थे कमर्शियल सीओ-ऑपरेटिव बैंक
+  The Davanagere Harihar Urban Sahakara Bank Niyamitha:
+  - थे दावणगेरे हरिहर अर्बन सहकारा बैंक नियमित
+  - थे दावणगेरे हरिहर अर्बन सहकारा बैंक
+  The Dhanbad Central Co-Operative Bank Ltd.:
+  - थे धनबाद सेंट्रल सीओ-ऑपरेटिव बैंक लिमिटेड
+  - थे धनबाद सेंट्रल सीओ-ऑपरेटिव बैंक
+  The Erode District Central Co-Operative Bank Ltd:
+  - थे इरोड डिस्ट्रिक्ट सेंट्रल सीओ-ऑपरेटिव बैंक लिमिटेड
+  - थे इरोड डिस्ट्रिक्ट सेंट्रल सीओ-ऑपरेटिव बैंक
+  The Gandhi Gunj Co-Operative Bank Ltd:
+  - थे गांधी गुंज सीओ-ऑपरेटिव बैंक लिमिटेड
+  - थे गांधी गुंज सीओ-ऑपरेटिव बैंक
+  The Gandhinagar Urban Coop Bank Ltd:
+  - थे गांधीनगर अर्बन कूप बैंक लिमिटेड
+  - थे गांधीनगर अर्बन कूप बैंक
+  The Haryana State Co-operative Apex Bank Ltd:
+  - थे हरियाणा स्टेट सीओ-ऑपरेटिव एपेक्स बैंक लिमिटेड
+  - थे हरियाणा स्टेट सीओ-ऑपरेटिव एपेक्स बैंक
+  The Kakinada Co-Op Town Bank Ltd:
+  - थे काकीनाडा सीओ-ओप टाउन बैंक लिमिटेड
+  - थे काकीनाडा सीओ-ओप टाउन बैंक
+  The Kodagu District Cooperrative Central Bank Ltd:
+  - थे कोडागू डिस्ट्रिक्ट कोआपरेटिव सेंट्रल बैंक लिमिटेड
+  - थे कोडागू डिस्ट्रिक्ट कोआपरेटिव सेंट्रल बैंक
+  The Kopargaon Peoples Co Op Bank Ltd:
+  - थे कोपरगांव पीपल्स सीओ ओप बैंक लिमिटेड
+  - थे कोपरगांव पीपल्स सीओ ओप बैंक
+  The Latur Urban Coop Bank Ltd,Latur:
+  - थे लातूर अर्बन कूप बैंक लिमिटेड लातूर
+  - थे लातूर अर्बन कूप बैंक
+  The Makarpura Industrial Estate Cooperative Bank Ltd.:
+  - थे मकरपुरा इंडस्ट्रियल एस्टेट कोआपरेटिव बैंक लिमिटेड
+  - थे मकरपुरा इंडस्ट्रियल एस्टेट कोआपरेटिव बैंक
+  The Meghalaya Cooperative Apex Bank Ltd.:
+  - थे मेघालय कोआपरेटिव एपेक्स बैंक लिमिटेड
+  - थे मेघालय कोआपरेटिव एपेक्स बैंक
+  The Moti Urban Co-operative Bank Ltd, Taloda:
+  - थे मोती अर्बन सीओ-ऑपरेटिव बैंक लिमिटेड तलोदा
+  - थे मोती अर्बन सीओ-ऑपरेटिव बैंक
+  The Panipat Urban Cooperative Bank LTD:
+  - थे पानीपत अर्बन कोआपरेटिव बैंक लिमिटेड
+  - थे पानीपत अर्बन कोआपरेटिव बैंक
+  The Raichur District Central Co-op Bank Ltd Raichur:
+  - थे रायचूर डिस्ट्रिक्ट सेंट्रल सीओ-ओप बैंक लिमिटेड रायचूर
+  - थे रायचूर डिस्ट्रिक्ट सेंट्रल सीओ-ओप बैंक
+  The Railway Employees Cooperative Bank Ltd,Jaipur:
+  - थे रेलवे एम्प्लाइज कोआपरेटिव बैंक लिमिटेड जयपुर
+  - थे रेलवे एम्प्लाइज कोआपरेटिव बैंक
+  The Ranuj Nagrik Sahakari Bank Ltd:
+  - थे रनुज नागरिक सहकारी बैंक लिमिटेड
+  - थे रनुज नागरिक सहकारी बैंक
+  The Sarvodaya Sahakari Bank Ltd., Modasa:
+  - थे सर्वोदय सहकारी बैंक लिमिटेड मोडासा
+  - थे सर्वोदय सहकारी बैंक
+  The Shoranur Co Operative Urban Bank Ltd:
+  - थे शोरानूर सीओ ऑपरेटिव अर्बन बैंक लिमिटेड
+  - थे शोरानूर सीओ ऑपरेटिव अर्बन बैंक
+  The Urban Co-Operative Bank Ltd,Perinthalmanna:
+  - थे अर्बन सीओ-ऑपरेटिव बैंक लिमिटेड पेरिंथलमन्ना
+  - थे अर्बन सीओ-ऑपरेटिव बैंक
+  The Uttarsanda Peoples Coop Bank Ltd Uttarsanda:
+  - थे उत्तरसंडा पीपल्स कूप बैंक लिमिटेड उत्तरसंडा
+  - थे उत्तरसंडा पीपल्स कूप बैंक
+  The Veraval Mercantile Co-operative Bank Ltd:
+  - थे वेरावल मर्केंटाइल सीओ-ऑपरेटिव बैंक लिमिटेड
+  - थे वेरावल मर्केंटाइल सीओ-ऑपरेटिव बैंक
+  The Zoroastrian Co-operative Bank Ltd.:
+  - थे जोरास्ट्रियन सीओ-ऑपरेटिव बैंक लिमिटेड
+  - थे जोरास्ट्रियन सीओ-ऑपरेटिव बैंक
+  Tumkur Grain Merchants Co-operative Bank Ltd:
+  - तुमकुर ग्रेन मर्चेंट सीओ-ऑपरेटिव बैंक लिमिटेड
+  - तुमकुर ग्रेन मर्चेंट सीओ-ऑपरेटिव बैंक
+  UMA CO-OPERATIVE BANK LTD:
+  - उमा सीओ-ऑपरेटिव बैंक लिमिटेड
+  - उमा सीओ-ऑपरेटिव बैंक
+  URBAN CO OPERATIVA BANK LTD SIDDHARTHNAGAR:
+  - अर्बन सीओ ऑपरेटिवा बैंक लिमिटेड सिद्धार्थनगर
+  - अर्बन सीओ ऑपरेटिवा बैंक
+  Umiya Urban Co-Operative Bank Maryadit Nagpur:
+  - उमिया अर्बन सीओ-ऑपरेटिव बैंक मर्यादित नागपुर
+  - उमिया अर्बन सीओ-ऑपरेटिव बैंक
+  Unimoni Financial Services Limited:
+  - यूनिमोनी फाइनेंशियल सर्विस लिमिटेड
+  Unjha Nagarik Sahakari Bank Ltd:
+  - ऊंझा नागरिक सहकारी बैंक लिमिटेड
+  - ऊंझा नागरिक सहकारी बैंक
+  Vilas Co-operative Bank Ltd., Latur:
+  - विलास सीओ-ऑपरेटिव बैंक लिमिटेड लातूर
+  - विलास सीओ-ऑपरेटिव बैंक
+  Warangal District Coop Central Bank Ltd:
+  - वारंगल डिस्ट्रिक्ट कूप सेंट्रल बैंक लिमिटेड
+  - वारंगल डिस्ट्रिक्ट कूप सेंट्रल बैंक
+  ZILA SAHKARI BANK LTD, LAKHIMPUR KHERI:
+  - जिला सहकारी बैंक लिमिटेड लखीमपुर खेरी
+  - जिला सहकारी बैंक
+  Zila Sahkari Bank Ltd Rampur:
+  - जिला सहकारी बैंक लिमिटेड रामपुर
+  - जिला सहकारी बैंक
+  ACE Cooperative Bank Ltd:
+  - एसीई कोआपरेटिव बैंक लिमिटेड
+  - एसीई कोआपरेटिव बैंक
+  Balitikuri Co-Operative Bank Ltd:
+  - बलितिकुरी सीओ-ऑपरेटिव बैंक लिमिटेड
+  - बलितिकुरी सीओ-ऑपरेटिव बैंक
+  Contai Co-operative Bank Limited:
+  - कोंटाई सीओ-ऑपरेटिव बैंक लिमिटेड
+  - कोंटाई सीओ-ऑपरेटिव बैंक
+  LIC Employees Co-operative Bank Ltd,Udupi:
+  - एलआईसी एम्प्लाइज सीओ-ऑपरेटिव बैंक लिमिटेड उडुपी
+  - एलआईसी एम्प्लाइज सीओ-ऑपरेटिव बैंक
+  Liluah Co-operative Bank Ltd:
+  - लिलुआ सीओ-ऑपरेटिव बैंक लिमिटेड
+  - लिलुआ सीओ-ऑपरेटिव बैंक
+  Lokvikas Nagari Sahakari Bank Ltd:
+  - लोकविकास नगरी सहकारी बैंक लिमिटेड
+  - लोकविकास नगरी सहकारी बैंक
+  Maharashtra Nagari Sahakari Bank Ltd, Latur:
+  - महाराष्ट्र नगरी सहकारी बैंक लिमिटेड लातूर
+  - महाराष्ट्र नगरी सहकारी बैंक
+  NAVAL DOCKYARD BANK:
+  - नवल डॉकयार्ड बैंक
+  NORTHERN RAILWAY MULTI STATE PRIMARY COOPERATIVE BANK LTD:
+  - नॉर्दर्न रेलवे मल्टी स्टेट प्राइमरी कोआपरेटिव बैंक लिमिटेड
+  - नॉर्दर्न रेलवे मल्टी स्टेट प्राइमरी कोआपरेटिव बैंक
+  SHARAD SAHAKARI BANK LTD MANCHAR:
+  - शरद सहकारी बैंक लिमिटेड मंचर
+  - शरद सहकारी बैंक
+  SHRI CHHANI NAGRIK SAHAKARI BANK LTD:
+  - श्री छानी नागरिक सहकारी बैंक लिमिटेड
+  - श्री छानी नागरिक सहकारी बैंक
+  Shri Anand Nagari Sahakari Bank Ltd.Chandrapur:
+  - श्री आनंद नगरी सहकारी बैंक लिमिटेड चंद्रपुर
+  - श्री आनंद नगरी सहकारी बैंक
+  Shri Rukmini Sahakari Bank Ltd, Shrigonda:
+  - श्री रुक्मिणी सहकारी बैंक लिमिटेड, श्रीगोंदा
+  - श्री रुक्मिणी सहकारी बैंक
+  Sonbhadra Nagar Sahkari Bank Ltd:
+  - सोनभद्र नगर सहकारी बैंक लिमिटेड
+  - सोनभद्र नगर सहकारी बैंक
+  The Babasaheb Deshmukh Sahakari Bank Ltd , Atpadi:
+  - थे बाबासाहेब देशमुख सहकारी बैंक लिमिटेड अटपड़ी
+  - थे बाबासाहेब देशमुख सहकारी बैंक
+  The Gandhidham Mercantile Co-operative Bank Ltd:
+  - थे गांधीधाम मर्केंटाइल सीओ-ऑपरेटिव बैंक लिमिटेड
+  - थे गांधीधाम मर्केंटाइल सीओ-ऑपरेटिव बैंक
+  The Umreth Urban Co-Operative Bank Ltd:
+  - थे उमरेठ अर्बन सीओ-ऑपरेटिव बैंक लिमिटेड
+  - थे उमरेठ अर्बन सीओ-ऑपरेटिव बैंक
+  The Vaish Co-operative New Bank Ltd:
+  - थे वैश सीओ-ऑपरेटिव न्यू बैंक लिमिटेड
+  - थे वैश सीओ-ऑपरेटिव न्यू बैंक
+  Vyavsayik Bank:
+  - व्यावसायिक बैंक
+  Wana Nagarik Sahakari Bank Ltd.:
+  - वाना नागरिक सहकारी बैंक लिमिटेड
+  - वाना नागरिक सहकारी बैंक
 # electricity_board:
 #   APEPDCL-Eastern Power Distribution CO AP Ltd:
 #   - इस्टर्न पॉवर डिस्ट्रिब्यूशन सी ओ ए पी लिमिटेड
