--- a/entity/data/variations/variations-te.yaml
+++ b/entity/data/variations/variations-te.yaml
@@ -1369,10 +1369,241 @@ bank_name:
   Yes Bank:
   - యెస్ బ్యాంక్
   - ఎస్ బ్యాంక్
-  ZILA SAHKARI BANK LTD, LAKHIMPUR KHERI:
-  - జిలా సహకారి బ్యాంక్, లఖింపూర్ ఖేరి
   Zila Sahkari Bank Ltd Rampur:
   - జిలా సహకారి బ్యాంక్ రాంపూర్
+  ADARNIYA P D PATILSAHEB SAHAKARI BANK LTD KARAD:
+  - ఆదర్నియా పి డి పాటిల్సాహెబ్ సహకారి బ్యాంక్ ఎల్టీడీ కరాడ్
+  - ఆదర్నియా పి డి పాటిల్సాహెబ్ సహకారి బ్యాంక్
+  AMAN SAHAKARI BANK LTD.,ICHALKARANJI:
+  - అమన్ సహకారి బ్యాంక్ ఎల్టీడీ.,ఇచ్చలకరంజి
+  - అమన్ సహకారి బ్యాంక్
+  Abhinandan Urban Coop Bank Amravati:
+  - అభినందన్ అర్బన్ కూప్ బ్యాంక్ అమరావతి
+  - అభినందన్ అర్బన్ కూప్ బ్యాంక్
+  Appasaheb Birnale Sahakari Bank Ltd Dudhgaon:
+  - అప్పాసాహెబ్ బిర్నాలే సహకారి బ్యాంక్ ఎల్టీడీ దుధ్గాన్
+  - అప్పాసాహెబ్ బిర్నాలే సహకారి బ్యాంక్
+  BRAHMADEODADA MANE SAHAKARI BANK LTD SOLAPUR:
+  - బ్రహ్మడిఓడాడ మేన్ సహకారి బ్యాంక్ ఎల్టీడీ సోలాపూర్
+  - బ్రహ్మడిఓడాడ మేన్ సహకారి బ్యాంక్
+  Betul Nagrik Sahakari Bank Ltd:
+  - బేతుల్ నాగ్రిక్ సహకారి బ్యాంక్ ఎల్టీడీ
+  - బేతుల్ నాగ్రిక్ సహకారి బ్యాంక్
+  Bhagini Nivedita Sahakari Bank Ltd,Pune:
+  - భాగిని నివేదిత సహకారి బ్యాంక్ ఎల్టీడీ పునే
+  - భాగిని నివేదిత సహకారి బ్యాంక్
+  CSB Bank Limited:
+  - సీఎస్బీ బ్యాంక్ లిమిటెడ్
+  - సీఎస్బీ బ్యాంక్
+  Chaitanya Mahila Bank:
+  - చైతన్య మహిళ బ్యాంక్
+  Chittorgarh Urban Co-operative Bank Ltd:
+  - చిత్తోర్ఘర్ అర్బన్ కో-ఆపరేటివ్ బ్యాంక్ ఎల్టీడీ
+  - చిత్తోర్ఘర్ అర్బన్ కో-ఆపరేటివ్ బ్యాంక్
+  Citizen Credit Co-Operative Bank Ltd.:
+  - సిటిజన్ క్రెడిట్ కో-ఆపరేటివ్ బ్యాంక్ ఎల్టీడీ
+  - సిటిజన్ క్రెడిట్ కో-ఆపరేటివ్ బ్యాంక్
+  - సిటిజెన్ క్రెడిట్ కో-ఆపరేటివ్ బ్యాంక్
+  - సిటిజెన్ క్రెడిట్ కో-ఆపరేటివ్ బ్యాంక్ ఎల్టీడీ
+  DAIVADNYA SAHAKAR BANK NIYAMIT:
+  - దైవజ్ఞ సహకార్ బ్యాంక్ నియమిత
+  - దైవజ్ఞ సహకార్ బ్యాంక్
+  Dr. Annasaheb Chougule Urban Co-Op. Bank Ltd.,Peth Vadgaon:
+  - డ్ర్. అన్నాసాహెబ్ చౌగులే అర్బన్ కో-ఆప్. బ్యాంక్ ఎల్టీడీ పెత్ వడ్గాన్
+  - అన్నాసాహెబ్ చౌగులే అర్బన్ కో-ఆప్ బ్యాంక్
+  Dr. Appasaheb Urf Sa. Re. Patil Jaysingpur Udgaon Sahakari Bank Ltd Jaysingpur:
+  - డ్ర్. అప్పాసాహెబ్ ఉర్ఫ్ సా. రే. పాటిల్ జయ్సింగపూర్ ఉద్గాన్ సహకారి బ్యాంక్ ఎల్టీడీ జయ్సింగపూర్
+  - అప్పాసాహెబ్ ఉర్ఫ్ సా. రే. పాటిల్ జయ్సింగపూర్ ఉద్గాన్ సహకారి బ్యాంక్
+  Hadagali Urban Co-Operative Bank Ltd:
+  - హడగలి అర్బన్ కో-ఆపరేటివ్ బ్యాంక్ ఎల్టీడీ
+  - హడగలి అర్బన్ కో-ఆపరేటివ్ బ్యాంక్
+  Haveli Sahakari Bank Maryadit.:
+  - హవేలీ సహకారి బ్యాంక్ మర్యాదిత్.
+  - హవేలీ సహకారి బ్యాంక్
+  IDFC Bank:
+  - ఐడీఎఫ్సీ బ్యాంక్
+  ILKAL CO-OPERATIVE BANK LTD ILKAL:
+  - ఇల్కల్ కో-ఆపరేటివ్ బ్యాంక్ ఎల్టీడీ ఇల్కల్
+  - ఇల్కల్ కో-ఆపరేటివ్ బ్యాంక్
+  Indore Cloth Market Co-Op Bank Ltd:
+  - ఇండోర్ క్లాత్ మార్కెట్ కో-ఆప్ బ్యాంక్ ఎల్టీడీ
+  - ఇండోర్ క్లాత్ మార్కెట్ కో-ఆప్ బ్యాంక్
+  Indraprastha Sehkari Bank Ltd:
+  - ఇంద్రప్రస్థ సెహ్కారి బ్యాంక్ ఎల్టీడీ
+  - ఇంద్రప్రస్థ సెహ్కారి బ్యాంక్
+  Jamia Co-Operative Bank Ltd:
+  - జామియా కో-ఆపరేటివ్ బ్యాంక్ ఎల్టీడీ
+  - జామియా కో-ఆపరేటివ్ బ్యాంక్
+  Janata Sahakari Bank Ltd., Ajara:
+  - జనతా సహకారి బ్యాంక్ ఎల్టీడీ., అజర
+  - జనతా సహకారి బ్యాంక్
+  Jankalyan Urban Co-Operative Bank Ltd:
+  - జనకల్యాణ్ అర్బన్ కో-ఆపరేటివ్ బ్యాంక్ ఎల్టీడీ
+  - జనకల్యాణ్ అర్బన్ కో-ఆపరేటివ్ బ్యాంక్
+  Kashi Gomati Samyut Grameen Bank:
+  - కాశీ గోమతి సంయుత్ గ్రామీణ బ్యాంక్
+  Khardah Co-operative Bank Ltd.:
+  - ఖర్దా కో-ఆపరేటివ్ బ్యాంక్ ఎల్టీడీ.
+  - ఖర్దా కో-ఆపరేటివ్ బ్యాంక్
+  Krishna Mercantile Cooperative Bank Ltd Bhopal:
+  - కృష్ణ మెర్కాంటైల్ కోఆపరేటివ్ బ్యాంక్ ఎల్టీడీ భోపాల్
+  - కృష్ణ మెర్కాంటైల్ కోఆపరేటివ్ బ్యాంక్
+  Lakhimpur Urban Cooperative Bank Ltd.:
+  - లఖింపూర్ అర్బన్ కోఆపరేటివ్ బ్యాంక్ ఎల్టీడీ.
+  - లఖింపూర్ అర్బన్ కోఆపరేటివ్ బ్యాంక్
+  Merchants liberal Co operative Bank Ltd Gadag:
+  - మర్చెంట్స్ లిబరల్ కో ఆపరేటివ్ బ్యాంక్ ఎల్టీడీ గడగ్
+  - మర్చెంట్స్ లిబరల్ కో ఆపరేటివ్ బ్యాంక్
+  NAVANAGARA URBAN CO-OPERATIVE BANK LTD.:
+  - నవనగర అర్బన్ కో-ఆపరేటివ్ బ్యాంక్ ఎల్టీడీ.
+  - నవనగర అర్బన్ కో-ఆపరేటివ్ బ్యాంక్
+  One MobiKwik Systems Limited:
+  - వన్ మొబిక్విక్ సిస్టమ్స్ లిమిటెడ్
+  PDP BANK KARAD bank:
+  - పీడీపీ బ్యాంక్ కరాడ్ బ్యాంక్
+  PayU Payments Private Limited:
+  - పాయు పేమెంట్స్ ప్రైవేట్ లిమిటెడ్
+  Priyadarshani Urban Co Op Bank Ltd Kallam:
+  - ప్రియదర్శని అర్బన్ కో ఆప్ బ్యాంక్ ఎల్టీడీ కల్లం
+  - ప్రియదర్శని అర్బన్ కో ఆప్ బ్యాంక్
+  Puduvai Bharathiar Grama Bank:
+  - పుదువై భారతీయార్ గ్రామ బ్యాంక్
+  Rajapur Urban Cooperative Bank Ltd:
+  - రాజాపూర్ అర్బన్ కోఆపరేటివ్ బ్యాంక్ ఎల్టీడీ
+  - రాజాపూర్ అర్బన్ కోఆపరేటివ్ బ్యాంక్
+  Rajlaxmi Urban Co-op Bank Ltd:
+  - రాజలక్ష్మి అర్బన్ కో-ఆప్ బ్యాంక్ ఎల్టీడీ
+  - రాజలక్ష్మి అర్బన్ కో-ఆప్ బ్యాంక్
+  Rapipay Fintech Private Limited:
+  - రాపిపే ఫిన్టెక్ ప్రైవేట్ లిమిటెడ్
+  Ratnagiri District Central Co operative Bank Ltd:
+  - రత్నగిరి డిస్ట్రిక్ట్ సెంట్రల్ కో ఆపరేటివ్ బ్యాంక్ ఎల్టీడీ
+  - రత్నగిరి డిస్ట్రిక్ట్ సెంట్రల్ కో ఆపరేటివ్ బ్యాంక్
+  SALEM DISTRICT CENTRAL COOPERATIVE BANK:
+  - సాలెం డిస్ట్రిక్ట్ సెంట్రల్ కోఆపరేటివ్ బ్యాంక్
+  - సాలెం డిస్ట్రిక్ట్ సెంట్రల్ కోఆపరేటివ్ బ్యాంక్
+  SANMITRA MAHILA NAGARI SAHAKARI BANK MARYADIT CHANDRAPUR:
+  - సన్మిత్ర మహిళ నగరి సహకారి బ్యాంక్ మర్యాదిత్ చంద్రాపూర్
+  - సన్మిత్ర మహిళ నగరి సహకారి బ్యాంక్
+  SARDAR SINGH NAGRIK SAHKARI BANK MARYADIT TIKAMGARH:
+  - సర్దార్ సింగ్ నాగ్రిక్ సహకారి బ్యాంక్ మర్యాదిత్ తికంగర్
+  - సర్దార్ సింగ్ నాగ్రిక్ సహకారి బ్యాంక్
+  SHREE BALAJI URBAN CO OPERATIVE BANK LTD:
+  - శ్రీ బాలాజీ అర్బన్ కో ఆపరేటివ్ బ్యాంక్ ఎల్టీడీ
+  - శ్రీ బాలాజీ అర్బన్ కో ఆపరేటివ్ బ్యాంక్
+  Sadalga Urban Souharda Sahakari Bank Niyamit:
+  - సడల్గా అర్బన్ సౌహార్ద సహకారి బ్యాంక్ నియమిత
+  - సడల్గా అర్బన్ సౌహార్ద సహకారి బ్యాంక్
+  Saptagiri Grameena Bank:
+  - సప్తగిరి గ్రామీణ బ్యాంక్
+  Shri Chatrapati Shivaji Maharaj Sahakari:
+  - శ్రీ చత్రపతి శివాజీ మహారాజ్ సహకారి
+  Shri Gajanan Maharaj Urban Co-Op Bank Ltd Bhokardan:
+  - శ్రీ గజానన్ మహారాజ్ అర్బన్ కో-ఆప్ బ్యాంక్ ఎల్టీడీ భోకర్దన్
+  - శ్రీ గజానన్ మహారాజ్ అర్బన్ కో-ఆప్ బ్యాంక్
+  Shri Yashwant Sahakari Bank Maryadit Kuditre:
+  - శ్రీ యశ్వంత్ సహకారి బ్యాంక్ మర్యాదిత్ కుడిత్రే
+  - శ్రీ యశ్వంత్ సహకారి బ్యాంక్
+  Shri  D. T. Patil Co-opertive Bank Ltd, Chikodi:
+  - శ్రీ  డ్. ట్. పాటిల్ కో-ఆపర్టివ్ బ్యాంక్ ఎల్టీడీ చికోడి
+  - శ్రీ  డ్. ట్. పాటిల్ కో-ఆపర్టివ్ బ్యాంక్
+  Sri Gokarnanath Co-Operative Bank Ltd:
+  - శ్రీ గోకర్ణనాథ్ కో-ఆపరేటివ్ బ్యాంక్ ఎల్టీడీ
+  - శ్రీ గోకర్ణనాథ్ కో-ఆపరేటివ్ బ్యాంక్
+  THE AMRAVATI ZILLA PARISHAD SHIKSHAK SAHAKARI BANK:
+  - ది అమరావతి జిల్లా పరిషద్ శిక్షక్ సహకారి బ్యాంక్
+  THE CHIPLUN URBAN COOPERATIVE BANK LTD:
+  - ది చిప్లున్ అర్బన్ కోఆపరేటివ్ బ్యాంక్ ఎల్టీడీ
+  - ది చిప్లున్ అర్బన్ కోఆపరేటివ్ బ్యాంక్
+  THE KANGRA CENTRAL CO-OPERATIVE BANK LTD:
+  - ది కాంగ్రా సెంట్రల్ కో-ఆపరేటివ్ బ్యాంక్ ఎల్టీడీ
+  - ది కాంగ్రా సెంట్రల్ కో-ఆపరేటివ్ బ్యాంక్
+  THE NASIKROAD DEOLALI VYAPARI SAHAKARI BANK LTD.:
+  - ది నాసిక్రోడ్ డియోలాలి వ్యాపారి సహకారి బ్యాంక్ ఎల్టీడీ
+  - ది నాసిక్రోడ్ డియోలాలి వ్యాపారి సహకారి బ్యాంక్
+  THE RAIGAD DISTRICT CO OPERATIVE BANK LTD ALIBAG:
+  - ది రాయగడ్ డిస్ట్రిక్ట్ కో ఆపరేటివ్ బ్యాంక్ ఎల్టీడీ అలీబాగ్
+  - ది రాయగడ్ డిస్ట్రిక్ట్ కో ఆపరేటివ్ బ్యాంక్
+  The Bhagyalakshmi Mahila Sahakari Bank Ltd:
+  - ది భాగ్యలక్ష్మి మహిళ సహకారి బ్యాంక్ ఎల్టీడీ
+  - ది భాగ్యలక్ష్మి మహిళ సహకారి బ్యాంక్
+  The Chandigarh State Co-op Bank Ltd:
+  - ది చండీగర్ స్టేట్ కో-ఆప్ బ్యాంక్ ఎల్టీడీ
+  - ది చండీగర్ స్టేట్ కో-ఆప్ బ్యాంక్
+  The Gandhi Gunj Co-Operative Bank Ltd:
+  - ది గాంధీ గుంజ్ కో-ఆపరేటివ్ బ్యాంక్ ఎల్టీడీ
+  - ది గాంధీ గుంజ్ కో-ఆపరేటివ్ బ్యాంక్
+  The Kopargaon Peoples Co Op Bank Ltd:
+  - ది కోపర్గాన్ పీపుల్స్ కో ఆప్ బ్యాంక్ ఎల్టీడీ
+  - ది కోపర్గాన్ పీపుల్స్ కో ఆప్ బ్యాంక్
+  The Latur Urban Coop Bank Ltd,Latur:
+  - ది లాతూర్ అర్బన్ కూప్ బ్యాంక్ ఎల్టీడీ,లాతూర్
+  - ది లాతూర్ అర్బన్ కూప్ బ్యాంక్
+  The Moti Urban Co-operative Bank Ltd, Taloda:
+  - ది మోతి అర్బన్ కో-ఆపరేటివ్ బ్యాంక్ ఎల్టీడీ తలోడా
+  - ది మోతి అర్బన్ కో-ఆపరేటివ్ బ్యాంక్
+  The Raichur District Central Co-op Bank Ltd Raichur:
+  - ది రాయచూర్ డిస్ట్రిక్ట్ సెంట్రల్ కో-ఆప్ బ్యాంక్ ఎల్టీడీ రాయచూర్
+  - ది రాయచూర్ డిస్ట్రిక్ట్ సెంట్రల్ కో-ఆప్ బ్యాంక్
+  The Railway Employees Cooperative Bank Ltd,Jaipur:
+  - ది రైల్వే ఎంప్లాయీస్ కోఆపరేటివ్ బ్యాంక్ ఎల్టీడీ జైపూర్
+  - ది రైల్వే ఎంప్లాయీస్ కోఆపరేటివ్ బ్యాంక్
+  The Ranuj Nagrik Sahakari Bank Ltd:
+  - ది రణుజ్ నాగ్రిక్ సహకారి బ్యాంక్ ఎల్టీడీ
+  - ది రణుజ్ నాగ్రిక్ సహకారి బ్యాంక్
+  The Sarvodaya Sahakari Bank Ltd., Modasa:
+  - ది సర్వోదయ సహకారి బ్యాంక్ ఎల్టీడీ మొదస
+  - ది సర్వోదయ సహకారి బ్యాంక్
+  The Shoranur Co Operative Urban Bank Ltd:
+  - ది షోరనూర్ కో ఆపరేటివ్ అర్బన్ బ్యాంక్ ఎల్టీడీ
+  - ది షోరనూర్ కో ఆపరేటివ్ అర్బన్ బ్యాంక్
+  The Urban Co-Operative Bank Ltd,Perinthalmanna:
+  - ది అర్బన్ కో-ఆపరేటివ్ బ్యాంక్ ఎల్టీడీపెరింథల్మన్న
+  - ది అర్బన్ కో-ఆపరేటివ్ బ్యాంక్
+  Tumkur Grain Merchants Co-operative Bank Ltd:
+  - తుమ్కూర్ గ్రెయిన్ మర్చెంట్స్ కో-ఆపరేటివ్ బ్యాంక్ ఎల్టీడీ
+  - తుమ్కూర్ గ్రెయిన్ మర్చెంట్స్ కో-ఆపరేటివ్ బ్యాంక్
+  Umiya Urban Co-Operative Bank Maryadit Nagpur:
+  - ఉమియా అర్బన్ కో-ఆపరేటివ్ బ్యాంక్ మర్యాదిత్ నాగ్పూర్
+  - ఉమియా అర్బన్ కో-ఆపరేటివ్ బ్యాంక్
+  Unimoni Financial Services Limited:
+  - యూనిమోని ఫైనాన్షియల్ సర్వీసెస్ లిమిటెడ్
+  Unjha Nagarik Sahakari Bank Ltd:
+  - ఉంజా నాగరిక్ సహకారి బ్యాంక్ ఎల్టీడీ
+  - ఉంజా నాగరిక్ సహకారి బ్యాంక్
+  Vilas Co-operative Bank Ltd., Latur:
+  - విలాస్ కో-ఆపరేటివ్ బ్యాంక్ ఎల్టీడీ., లాతూర్
+  - విలాస్ కో-ఆపరేటివ్ బ్యాంక్
+  ZILA SAHKARI BANK LTD, LAKHIMPUR KHERI:
+  - జిలా సహకారి బ్యాంక్ ఎల్టీడీ, లఖింపూర్ ఖేరి
+  - జిలా సహకారి బ్యాంక్
+  Balitikuri Co-Operative Bank Ltd:
+  - బలిటికురి కో-ఆపరేటివ్ బ్యాంక్ ఎల్టీడీ
+  - బలిటికురి కో-ఆపరేటివ్ బ్యాంక్
+  Contai Co-operative Bank Limited:
+  - కొంటాయి కో-ఆపరేటివ్ బ్యాంక్ లిమిటెడ్
+  - కొంటాయి కో-ఆపరేటివ్ బ్యాంక్
+  Lokvikas Nagari Sahakari Bank Ltd:
+  - లోక్వికాస్ నగరి సహకారి బ్యాంక్ ఎల్టీడీ
+  - లోక్వికాస్ నగరి సహకారి బ్యాంక్
+  NORTHERN RAILWAY MULTI STATE PRIMARY COOPERATIVE BANK LTD:
+  - నార్తర్న్ రైల్వే మల్టీ స్టేట్ ప్రైమరీ కోఆపరేటివ్ బ్యాంక్ ఎల్టీడీ
+  - నార్తర్న్ రైల్వే మల్టీ స్టేట్ ప్రైమరీ కోఆపరేటివ్ బ్యాంక్
+  SHARAD SAHAKARI BANK LTD MANCHAR:
+  - షరద్ సహకారి బ్యాంక్ ఎల్టీడీ మంచర్
+  - షరద్ సహకారి బ్యాంక్
+  Shri Rukmini Sahakari Bank Ltd, Shrigonda:
+  - శ్రీ రుక్మిణి సహకారి బ్యాంక్ ఎల్టీడీ, శ్రీగొండ
+  - శ్రీ రుక్మిణి సహకారి బ్యాంక్
+  Sonbhadra Nagar Sahkari Bank Ltd:
+  - సోన్భద్ర నగర్ సహకారి బ్యాంక్ ఎల్టీడీ
+  - సోన్భద్ర నగర్ సహకారి బ్యాంక్
+  The Gandhidham Mercantile Co-operative Bank Ltd:
+  - ది గాంధీధామ్ మెర్కాంటైల్ కో-ఆపరేటివ్ బ్యాంక్ ఎల్టీడీ
+  - ది గాంధీధామ్ మెర్కాంటైల్ కో-ఆపరేటివ్ బ్యాంక్
+  Wana Nagarik Sahakari Bank Ltd.:
+  - వానా నాగరిక్ సహకారి బ్యాంక్ ఎల్టీడీ.
+  - వానా నాగరిక్ సహకారి బ్యాంక్
 pipe_gas_provider_name:
   Aavantika Gas Ltd.:
   - ఆవంతిక గ్యాస్
@@ -1871,87 +2102,3 @@ telephone_operator:
 #   West Bengal State Electricity Distribution Co. Ltd (WBSEDCL):
 #   - వెస్ట్ బెంగాల్ స్టేట్ ఎలక్ట్రిసిటీ డిస్ట్రిబ్యూషన్ కో లిమిటెడ్
 #   - డబల్యూ బి ఎస్ ఈ డి సి ఎల్ 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
